test/corpus/edge-cases.txt
===
unfinished tables
===

{&as}
{lmao}
{:k v
 lmao-no}
{"key"}
{:value}

---

(program
  (table
    item: (table_pair
            key: (symbol_option)))
  (table
    item: (table_pair
            key: (symbol)))
  (table
    item: (table_pair
            key: (string
                   content: (string_content))
            value: (symbol))
    item: (table_pair
            key: (symbol)))
  (table
    item: (table_pair
      key: (string
        content: (string_content))))
  (table
    item: (table_pair
      key: (string
        content: (string_content)))))

===
colon string + reader macros
===

(:lol)
( :: )
(:#lmao)
(:#)
(#:mia)

---

(program
  (list (string (string_content)))
  (list (string (string_content)))
  (list (string (string_content)))
  (list (string (string_content)))
  (list (hashfn_reader_macro (string (string_content)))))

===
incorrect shebang
===

# !lol
#!lol

---

(program
  (symbol)
  (symbol)
  (hashfn_reader_macro
    (symbol)))

===
inf/nan in multi symbols
===

(let [t {:a 1}]
  (print t.info)
  (print t.nano))

---

(program
  (let_form
    call: (symbol)
    vars: (let_vars
            (binding_pair
              lhs: (symbol_binding)
              rhs: (table
                    item: (table_pair
                            key: (string
                                   content: (string_content))
                            value: (number)))))
    item: (list
            call: (symbol)
            item: (multi_symbol
                    base: (symbol_fragment)
                    member: (symbol_fragment)))
    item: (list
            call: (symbol)
            item: (multi_symbol
                    base: (symbol_fragment)
                    member: (symbol_fragment)))))
